service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-administrasi-service-test
  labels:
    type: web-app-administrasi-service-test
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: http
  selector:
    app: web-app-administrasi-test
